# CG-Projects

./: README.md
Assignment1/Q3/src/: Q3.cpp
Assignment1/include/: Tools.h
Assignment1/src/: PA1 Draft.cpp  Tools.cpp  glad.c
Assignment2/Q1/src/: Q1.cpp
Assignment2/include/: global.h
Assignment2/src/: PA2.cpp
Assignment3/include/: global.h
Assignment3/src/: PA3.cpp  Polygon.cpp
Assignment4/FirstDraft/: CMakeLists.txt
Assignment4/FirstDraft/include/: openGLPart.h
Assignment4/FirstDraft/src/: PA4.cpp  quadric surfaces.cpp
Assignment4/SecondDraft/include/: openGLPart.h
Assignment4/SecondDraft/src/: PA4.cpp  SnakeAndBunny.cpp  quadric surfaces.cpp
CA1/: CMakeLists.txt
CA1/src/: Q2.cpp  Q4.cpp  Q5.cpp  Q6.cpp
CA2/: CMakeLists.txt
CA2/include/: Tools.h
CA2/src/: PA1.cpp  Tools.cpp
CA3/: CMakeLists.txt
learnOpenGL/: glad.c
learnOpenGL/GettingStarted/: CMakeLists.txt  HelloWindow.cpp
