cmake_minimum_required(VERSION 3.22)
project(CW)
find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)
find_package(glfw3 REQUIRED)
include_directories(${OPENGL_INCLUDE_DIR}  ${GLUT_INCLUDE_DIR})
include_directories(include)
file(GLOB SOURCES "src/*.cpp")
add_executable(out ${SOURCES})
target_link_libraries(out ${OPENGL_LIBRARIES} ${GLUT_LIBRARY})
